[gd_scene load_steps=5 format=3 uid="uid://c5m4ijnrxr5qr"]

[ext_resource type="Texture2D" uid="uid://cn2mxd044dvod" path="res://MEM/assets/frames/hidden_frame_blank.png" id="1_qfj6f"]
[ext_resource type="Script" path="res://MEM/scenes/TtlMEMMemoryTile/TtlMEMMemoryTile.gd" id="2_bhnrb"]
[ext_resource type="Texture2D" uid="uid://1yrr062va4h0" path="res://MEM/assets/frames/blue_frame.png" id="2_tfgjw"]
[ext_resource type="Texture2D" uid="uid://dbspjpeaq3ucf" path="res://MEM/assets/glitch/admin_widget.png" id="3_7qnmg"]

[node name="TtlMemMemoryTile" type="TextureButton" groups=["tile"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_qfj6f")
script = ExtResource("2_bhnrb")

[node name="FrameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture = ExtResource("2_tfgjw")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_7qnmg")

[connection signal="pressed" from="." to="." method="_on_pressed"]
